# rtk-mine

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  uninstall.sh
.codewhale/: instructions.md
scripts/: install-hook.sh
src/: audit.rs  config.rs  main.rs  proxy.rs  security.rs
src/filters/: cat.rs  find.rs  generic.rs  git.rs  grep.rs  ls.rs  mod.rs  test.rs
tests/: integration.rs
