[package]
name = "rtk-mine"
version = "0.1.0"
edition = "2021"
description = "Secure, auditable CLI proxy that reduces LLM token consumption on dev commands"
license = "Apache-2.0"
repository = "https://github.com/user/rtk-mine"
readme = "README.md"

[[bin]]
name = "rtk-mine"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
